<resources>
    <string name="app_name">Elaps</string>
    <string name="minutes_90">90</string>
    <string name="minutes_60">60</string>
    <string name="minutes_45">45</string>
    <string name="minutes_30">30</string>
    <string name="minutes_20">20</string>
    <string name="notification_action_stop">Resetten</string>
    <string name="notification_action_resume">Hervatten</string>
    <string name="notification_state_paused">gepauzeerd</string>
    <string name="notification_action_pause">Pauzeren</string>
    <string name="notification_action_extend">5 min. toevoegen</string>
    <string name="notification_content_text">Timer %1$s</string>
    <string name="notification_state_finished">klaar</string>
    <string name="notification_state_stopped">gestopt</string>
    <string name="notification_action_start">starten</string>
    <string name="notification_action_terminate">verwijderen</string>
    <string name="channel_timer_running_desc">Make sound</string>
    <string name="channel_timer_finished_desc">Make sound and pop on screen</string>
    <string name="timer_extend_button_text">+ 5:00</string>
    <string name="initial_timer_setting">30</string>

    <string name="preferences_app_version_title">App version</string>
    <string name="preferences_analytics">User statistics</string>
    <string name="preferences_analytics_description">By sending anonymous user data, you will help improve this application</string>
    <string name="preferences_analytics_header">Privacy</string>
    <string name="preferences_display_dark_mode">Dark mode</string>
    <string name="preferences_timer_reset_walk">Reset timer</string>
    <string name="preferences_timer_reset_walk_description">Automatically reset a running timer to it\'s start position when you move</string>
    <string name="preferences_display_header">Display</string>
    <string name="preferences_timer_header">Timer</string>
    <string name="preferences_about_header">About</string>
    <string name="privacy_policy_title">Privacy policy</string>
    <string-array name="night_mode_items">
        <item>@string/night_mode_label_auto</item>
        <item>@string/night_mode_label_off</item>
        <item>@string/night_mode_label_on</item>
    </string-array>
    <string-array name="night_mode_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="night_mode_label_auto">Follow system</string>
    <string name="night_mode_label_off">Off</string>
    <string name="night_mode_label_on">On</string>
    <string name="action_settings">Settings</string>
    <string name="minutes_text">minutes</string>
    <string name="minute_text">minute</string>
    <string name="title_timer">Timer</string>
    <string name="title_settings">Settings</string>
    <string name="title_timer_settings">Settings</string>
    <string name="toast_reset_timer">Timer is reset due to activity!</string>
    <string name="toast_reset_timer_resume">Timer is resumed due to inactivity!</string>
    <string name="error_connection">Please check your internet connection</string>
    <string name="error_generic">Something went wrong</string>
    <string name="review_flow_done">Thank you for letting us know what you think!</string>
    <string name="permission_declined_text">The app needs this permission for auto-reset. Please allow to make use of this feature.</string>
    <string name="snackbar_open_settings">Open\nsettings</string>
    <string name="permission_allow">allow</string>
    <string name="permission_deny">no thanks</string>
    <string name="service_walk_detection_register_success">Successfully requested activity updates</string>
    <string name="service_walk_detection_register_fail">Requesting activity updates failed to start</string>
    <string name="service_walk_detection_unregister_success">Removed activity updates successfully!</string>
    <string name="service_walk_detection_unregister_fail">Failed to remove activity updates!</string>

</resources>