<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".timer.TimerSetupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/timer_selected_minutes"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="64dp"
            android:text="@string/initial_timer_setting"
            android:textAlignment="center"
            app:autoSizeMaxTextSize="200sp"
            app:autoSizeMinTextSize="72sp"
            android:includeFontPadding="false"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/minutes"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/minutes_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/timer_selected_minutes"
            app:layout_constraintStart_toStartOf="@id/timer_selected_minutes"
            app:layout_constraintTop_toBottomOf="@id/timer_selected_minutes" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/minutes_45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="@dimen/max_height_slider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/minutes" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/timer_select_gradient"
            app:layout_constraintBottom_toBottomOf="@id/recycler_view"
            app:layout_constraintEnd_toEndOf="@id/recycler_view"
            app:layout_constraintStart_toStartOf="@id/recycler_view"
            app:layout_constraintTop_toTopOf="@id/recycler_view" />

        <TextView
            android:id="@+id/indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="180"
            android:text="▼"
            android:textAlignment="center"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@id/recycler_view"
            app:layout_constraintStart_toStartOf="@id/recycler_view"
            app:layout_constraintTop_toBottomOf="@id/recycler_view" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/minute_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="minutes_20,minutes_30,minutes_45,minutes_60,minutes_90" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/minutes_20"
            android:layout_width="@dimen/timer_preset_size"
            android:layout_height="@dimen/timer_preset_size"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:padding="6dp"
            android:text="@string/minutes_20"
            android:textAlignment="center"
            android:textColor="@color/color_on_primary"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="30sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="6sp"
            app:autoSizeTextType="uniform"
            app:cornerRadius="1000dp"
            app:layout_constraintBottom_toBottomOf="@+id/minutes_30"
            app:layout_constraintEnd_toStartOf="@+id/minutes_30"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/minutes_45"
            app:layout_constraintWidth_percent=".10" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/minutes_30"
            android:layout_width="@dimen/timer_preset_size"
            android:layout_height="@dimen/timer_preset_size"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:padding="6dp"
            android:text="@string/minutes_30"
            android:textAlignment="center"
            android:textColor="@color/color_on_primary"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="30sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="6sp"
            app:autoSizeTextType="uniform"
            app:cornerRadius="1000dp"
            app:layout_constraintBottom_toBottomOf="@+id/minutes_45"
            app:layout_constraintEnd_toStartOf="@+id/minutes_45"
            app:layout_constraintStart_toEndOf="@+id/minutes_20"
            app:layout_constraintTop_toTopOf="@+id/minutes_45"
            app:layout_constraintWidth_percent=".10" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/minutes_45"
            android:layout_width="@dimen/timer_preset_size"
            android:layout_height="@dimen/timer_preset_size"
            android:layout_marginBottom="64dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:padding="6dp"
            android:text="@string/minutes_45"
            android:textAlignment="center"
            android:textColor="@color/color_on_primary"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="30sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="6sp"
            app:autoSizeTextType="uniform"
            app:cornerRadius="1000dp"
            app:layout_constraintBottom_toTopOf="@+id/timer_start_button"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/minutes_60"
            app:layout_constraintStart_toEndOf="@+id/minutes_30"
            app:layout_constraintWidth_percent=".10" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/minutes_60"
            android:layout_width="@dimen/timer_preset_size"
            android:layout_height="@dimen/timer_preset_size"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:padding="6dp"
            android:text="@string/minutes_60"
            android:textAlignment="center"
            android:textColor="@color/color_on_primary"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="30sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="6sp"
            app:autoSizeTextType="uniform"
            app:cornerRadius="1000dp"
            app:layout_constraintBottom_toBottomOf="@+id/minutes_45"
            app:layout_constraintEnd_toStartOf="@+id/minutes_90"
            app:layout_constraintStart_toEndOf="@+id/minutes_45"
            app:layout_constraintTop_toTopOf="@+id/minutes_45"
            app:layout_constraintWidth_percent=".10" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/minutes_90"
            android:layout_width="@dimen/timer_preset_size"
            android:layout_height="@dimen/timer_preset_size"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:padding="6dp"
            android:text="@string/minutes_90"
            android:textAlignment="center"
            android:textColor="@color/color_on_primary"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="30sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="6sp"
            app:autoSizeTextType="uniform"
            app:cornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="@+id/minutes_60"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/minutes_60"
            app:layout_constraintTop_toTopOf="@+id/minutes_45"
            app:layout_constraintWidth_percent=".10" />

        <ImageButton
            android:id="@+id/timer_start_button"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginBottom="32dp"
            android:scaleType="fitXY"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_play_circle_filled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>