<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/timer_selected_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:textSize="72sp"
        app:layout_constraintBottom_toTopOf="@id/recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/minutes"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="minuten"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/timer_selected_minutes"
        app:layout_constraintStart_toStartOf="@id/timer_selected_minutes"
        app:layout_constraintTop_toBottomOf="@id/timer_selected_minutes" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/minute_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/minutes" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/timer_select_gradient"
        app:layout_constraintBottom_toBottomOf="@id/recycler_view"
        app:layout_constraintEnd_toEndOf="@id/recycler_view"
        app:layout_constraintStart_toStartOf="@id/recycler_view"
        app:layout_constraintTop_toTopOf="@id/recycler_view" />

    <TextView
        android:id="@+id/indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="180"
        android:text="▼"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@id/recycler_view"
        app:layout_constraintStart_toStartOf="@id/recycler_view"
        app:layout_constraintTop_toBottomOf="@id/recycler_view" />

    <RadioGroup
        android:id="@+id/minute_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/timer_start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/minutes_20"
            android:layout_width="@dimen/timer_preset_size"
            android:layout_height="@dimen/timer_preset_size"
            android:layout_marginLeft="@dimen/timer_preset_margin"
            android:layout_marginRight="@dimen/timer_preset_margin"
            android:background="@drawable/round_button"
            android:button="@android:color/transparent"
            android:text="@string/minutes_20"
            android:textAlignment="center"
            android:textColor="@color/color_on_primary"
            android:textSize="@dimen/text_size_timer_preset"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/minutes_30"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/timer_preset_margin"
            android:layout_marginRight="@dimen/timer_preset_margin"
            android:background="@drawable/round_button"
            android:button="@android:color/transparent"
            android:text="@string/minutes_30"
            android:textAlignment="center"
            android:textColor="@color/color_on_primary"
            android:textSize="@dimen/text_size_timer_preset"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/minutes_45"
            android:layout_width="@dimen/timer_preset_size"
            android:layout_height="@dimen/timer_preset_size"
            android:layout_marginLeft="@dimen/timer_preset_margin"
            android:layout_marginRight="@dimen/timer_preset_margin"
            android:background="@drawable/round_button"
            android:button="@android:color/transparent"
            android:text="@string/minutes_45"
            android:textAlignment="center"
            android:textColor="@color/color_on_primary"
            android:textSize="@dimen/text_size_timer_preset"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/minutes_60"
            android:layout_width="@dimen/timer_preset_size"
            android:layout_height="@dimen/timer_preset_size"
            android:layout_marginLeft="@dimen/timer_preset_margin"
            android:layout_marginRight="@dimen/timer_preset_margin"
            android:background="@drawable/round_button"
            android:button="@android:color/transparent"
            android:text="@string/minutes_60"
            android:textAlignment="center"
            android:textColor="@color/color_on_primary"
            android:textSize="@dimen/text_size_timer_preset"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/minutes_90"
            android:layout_width="@dimen/timer_preset_size"
            android:layout_height="@dimen/timer_preset_size"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/round_button"
            android:button="@android:color/transparent"
            android:text="@string/minutes_90"
            android:textAlignment="center"
            android:textColor="@color/color_on_primary"
            android:textSize="@dimen/text_size_timer_preset"
            android:textStyle="bold" />

    </RadioGroup>

    <ImageView
        android:id="@+id/timer_start_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:src="@drawable/ic_play_circle_filled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>